# DCJam2024

./: .gitignore  CMakeLists.txt  README.md
data/: map_data.json
graphics/models/: level.glb
include/: battle_manager.h  constants.h  field_player.h  game.h  hud.h  level.h
include/battle_system/: battler.h  common.h  constants.h  enemy.h  enemy_troops.h  party.h  party_members.h  skill.h
include/battle_system/enemies/: golem.h  skeleton.h
include/battle_system/party_members/: ren.h  sakura.h  steve.h
include/battle_system/skills/: attack.h  defend.h  heal.h  laser_beam.h  quick_attack.h
include/field/: field_player.h
src/: battle_manager.cpp  field_player.cpp  game.cpp  hud.cpp  level.cpp  main.cpp
src/battle_system/: battler.cpp  enemy.cpp  enemy_troops.cpp  party.cpp  party_members.cpp  skill.cpp
src/battle_system/enemies/: golem.cpp  skeleton.cpp
src/battle_system/party_members/: ren.cpp  sakura.cpp  steve.cpp
src/battle_system/skills/: attack.cpp  defend.cpp  heal.cpp  laser_beam.cpp  quick_attack.cpp
src/field/: field_player.cpp
src/scenes/: battle_scene.cpp  field_scene.cpp  lose_scene.cpp  title_scene.cpp
